--- a/quiz.css
+++ b/quiz.css
@@ -1,10 +1,7 @@
-/*Sets border-box as the universal sizing mode*/
-* {
-  box-sizing: border-box;
-}
 
 /*Sets the body up as a flexbox container for the dunk card articles*/
 body {
+  box-sizing: border-box;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -34,6 +31,7 @@ img {
   display: block;
   width: 100%;
   max-width: 150px;
+  margin-top: 15px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -70,8 +68,8 @@ img {
   font-size: 0.7em;
 }
 
-/*A horrible kludge to left align center-justified flex items*/
-/*on lines without three items to display.*/
+/*A kludge using spacers to left align center-justified flex items*/
+/*on rows with less than three items to display.*/
 .empties {
   visibility: invisible;
   border: none;
